# internal/dto/requests/business_user_request.go
@@ -1,0 +1,8 @@
+package requests
+
+type BusinessUserRequest struct {
+	Username string `json:"username" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,passwordValidation"`
+	Name     string `json:"name" validate:"required"`
+}
