# internal/dto/responses/error_response.go
@@ -1,0 +1,6 @@
+package responses
+
+type ErrorResponse struct {
+	Error   string   `json:"error"`
+	Details []string `json:"details,omitempty"`
+}
